--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <span md-src-pos="5815..5883">stt.set_xticklabels(stt.get_xticklabels()<span style="color: rgb(204, 120, 50);">,</span> rotation=<span style="color: rgb(104, 151, 187);">90</span><span style="color: rgb(204, 120, 50);">,</span> ha=<span style="color: rgb(106, 135, 89);">"right"</span>)</span>
 <span md-src-pos="5883..5902">plt.tight_layout()</span>
 <span md-src-pos="5902..5903"></span><span md-src-pos="5902..5905"></span></code></pre>
-   <p md-src-pos="5932..5990"><img src="D:/Data%20Science/Python/projects/images/state.PNG" alt="State" __idea-generated="true" md-src-pos="5932..5990"></p>
+   <p md-src-pos="5932..5990"><img src="https://github.com/Cheekin1800/M.Lion-Assessment/blob/main/images/state.PNG" alt="State" __idea-generated="true" md-src-pos="5932..5990"></p>
    <ul md-src-pos="5991..6140">
     <li md-src-pos="5991..6140">Based on geographically, analyst can further investigate if the company is capable to proceed with market campaigning in the high demanding states.</li>
    </ul>
